spade-tests/src/snapshots/spade_tests__typeinference__uint_addition_produces_correct_bit_length.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: uint<8>, y: uint<8>) -> uint<10> {
    x + y
}


error: Output type mismatch. Expected uint<10>, got Number<9>
  ┌─ testinput:1:45
  │  
1 │   fn test(x: uint<8>, y: uint<8>) -> uint<10> {
  │                                      -------- uint<10> type specified here
  │ ╭─────────────────────────────────────────────^
2 │ │     x + y
  │ │     ----- Type 9 inferred here
3 │ │ }
  │ ╰─^ Found type Number<9>
  │  
  = note: Expected: 10
                in: uint<10>
               Got: 9
                in: Number<9>
