spade-tests/src/snapshots/spade_tests__typeinference__uint_concat_does_not_produce_int.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: uint<16>, y: uint<8>) -> int<24> {
    x `concat` y
}


error: Expected type int<24>, got uint<_>
  ┌─ testinput:2:5
  │
1 │ fn test(x: uint<16>, y: uint<8>) -> int<24> {
  │            --------                 ------- Type int<24> inferred here
  │            │                         
  │            Type uint<_> inferred here
2 │     x `concat` y
  │     ^^^^^^^^^^^^ Expected int<24>
  │
  = note: Expected: int<24>
               Got: uint<_>
