spade-tests/src/snapshots/spade_tests__typeinference__unit_return_expressionless_block.snap
---
source: spade-tests/src/typeinference.rs
---
fn f() -> bool {
    {}
}

error: Output type mismatch. Expected bool, got ()
  ┌─ testinput:1:16
  │  
1 │   fn f() -> bool {
  │             ---- bool type specified here
  │ ╭────────────────^
2 │ │     {}
  │ │     -- Type () inferred here
3 │ │ }
  │ ╰─^ Found type ()
  │  
  = note: Expected: bool
               Got: ()
