spade-tests/src/snapshots/spade_tests__typeinference__unknown_type_level_constants_are_reported_nicely.snap
---
source: spade-tests/src/typeinference.rs
snapshot_kind: text
---
fn test<#uint V, #uint N>() -> uint<8> {
    V
}

fn tester() -> uint<8> {
    test::<_, 1>()
}


error: The type of V is not fully known in this call
  ┌─ testinput:6:5
  │
1 │ fn test<#uint V, #uint N>() -> uint<8> {
  │          ------ V is defined here
  ·
6 │     test::<_, 1>()
  │     ^^^^^^^^^^^^^^ Type of type parameter V is not fully known
  │
  = help: Consider specifying the type parameters explicitly https://docs.spade-lang.org/units.html#brief-intro-to-generic-parameters
